--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:700');
+
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed');
+
+body, html {
+    
+    margin: 0;
+    padding: 0;
+}
