fin du vendredi

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,14 @@
-<footer>
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
 
-  
-
-</footer>
+        <!-- Footer Links -->
+     
+        <!-- Footer Links -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+          <a class="footer-copy" href="">Bikesterdam.com</a>
+        </div>
+        <!-- Copyright -->
+    
+      </footer>
+      <!-- Footer -->
