--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,13 @@
   <div class="row">
     <div class="col-12">
         <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+
+            <div class="container carousel-title-wrap">
+              <h1 class="carousel-title">Bienvenue sur Bikesterdam</h1>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero asperiores cumque veniam dolorum, explicabo ullam obcaecati fugit cupiditate aut itaque numquam vero odit quis eius tempore iusto alias soluta.</p>
+              <button class="btn btn-info text-center">En savoir plus</button>
+            </div>
+
             <mdb-carousel-item>
               <div class="view w-100">
                 <img class="d-block w-100" src="./assets/img/veloform4.jpg" alt="First slide">
@@ -35,7 +42,15 @@
     </div>
   </div>
 </div>
+<br>
+<!-- Catégorie Collec & News -->
+<hr class="hr">
+<div class="container-fluid Actualité">
+<a href=""><h1 class="Actualité text-center">Collections et Nouveautés</h1></a>
+</div>
+<hr class="hr">
 
+<!-- Collections vélos -->
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-lg-6 col-xs-12 col-sm-12">
@@ -43,33 +58,43 @@
             <div class="container">
               <h1 class="display-4">Nouveaux modèles</h1>
               <p class="lead">Nos nouveaux modèles dame fabriqué en hollande.</p>
+              <a href="#" class="div-click"><span></span></a>
             </div>
           </div>
     </div>
+
     <div class="col-md-6 col-lg-6 col-xs-12 col-sm-12">
         <div class="jumbotron jumbotron-2 jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Collection vélos d'hiver</h1>
               <p class="lead">Des modèles de vélos fidèles et tenaces. Roulez dans n'importe quelle condition avec style.</p>
+              <a class="div-click" href="#"><span></span></a>
             </div>
           </div>
     </div>
   </div>
 </div>
+<br>
+<br>
 
+
+<!-- Catégorie Histoire -->
 <hr class="hr">
 <div class="container-fluid story-telling">
 <a href=""><h1 class="story text-center">Notre histoire</h1></a>
 </div>
 <hr class="hr">
-
+<br>
+<!-- Histoire -->
 <div class="container">
   <div class="row">
     <div class="col-12">
         <div class="media">
-            <img src="..." class="align-self-start mr-3" alt="...">
+            <img src="./assets/img/history.jpg" class="align-self-start mr-3" alt="...">
             <div class="media-body">
-              <h5 class="mt-0">Top-aligned media</h5>
+              <h5 class="mt-0">Depuis 1970</h5>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+              <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
               <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
             </div>
@@ -77,6 +102,12 @@
     </div>
   </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+
+
 
 
   
