--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,47 @@
-a .story{
-    font-family: 'Montserrat', sans-serif;
-    text-shadow: 1px 1px 4px #137381;
+
+.div-click span{
+    position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
 }
 
+h1.story{
+    width: 340px;
+    border-bottom: 3px solid rgba(23, 162, 184, 0.5);
+    padding-bottom: 7px;
+    margin-left: 780px;
+}
 
+a .story{
+    font-family: 'Montserrat', sans-serif;
+    color: #2A363B;
+    text-decoration: none;
+}
+
+h1.Actualité{
+    width: 540px;
+    border-bottom: 3px solid rgba(23, 162, 184, 0.5);
+    padding-bottom: 7px;
+    margin-left: 680px;
+
+}
+
+a .Actualité{
+    font-family: 'Montserrat', sans-serif;
+    color: #2A363B;
+    
+}
+
+a{
+    text-decoration: none;
+}
+
+a .Actualité:hover{
+    font-family: 'Montserrat', sans-serif;
+    color: #2A363B;
+}
 
 .limiter{
     background: #E9F0F7;
@@ -13,6 +51,54 @@ a .story{
     overflow: hidden;
     padding: 0;
     }
+
+mdb-carousel{
+position: relative;
+}
+
+.carousel-title-wrap button{
+    margin-top: 20px;
+    margin-left: 438px;
+    border-radius: 15px;
+    text-shadow: 1px 1px 50px black;
+    width: 200px;
+    height: 44px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 19px;
+}
+
+.carousel-title{
+    margin-left: 150px;
+    font-size: 60px;
+    text-shadow: 1px 2px 15px black;
+}
+
+.carousel-title-wrap p{
+    text-shadow: 1px 2px 15px black;
+    margin-top: 30px;
+}
+
+.media-body{
+    font-family: 'Nunito', sans-serif;
+    color:#2A363B;
+}
+
+.media-body h5{
+    font-family: 'Nunito bold', sans-serif;
+}
+
+.carousel-title-wrap{
+position: absolute;
+opacity: 0.9;
+z-index: 1000;
+width: 100%;
+color: white;
+margin-left: 400px;
+margin-top: 150px;
+font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+background-color: rgba(12, 84, 95, 0.1);
+border-radius: 10%;
+}
 
 mdb-carousel img{
     opacity: 0.9;
@@ -24,8 +110,6 @@ mdb-carousel img{
     margin-top: 30px;
 }
 
-
-
 .jumbotron-2{
     background-image: url("/assets/img/winter.jpg");
     background-size: cover;
@@ -33,6 +117,7 @@ mdb-carousel img{
     color: white;
     font-family: 'Montserrat', sans-serif;
     text-shadow: 1px 3px 5px black;
+    position: relative;
 }
 
 .jumbotron-1{
@@ -42,5 +127,6 @@ mdb-carousel img{
     color: white;
     font-family: 'Montserrat', sans-serif;
     text-shadow: 1px 3px 5px black;
+    position: relative;
 }
 
