--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,4 +1,13 @@
-.fas  {
+nav{
+    background:linear-gradient(-200deg, #2A363B, #101D29);
+}
+
+li.nav-link .active-link{
+    color: #17a2b8;
+    text-shadow: #137381 1px 1px 10px;
+}
+
+.navbar-brand   {
     font-size: 50px;
     color:  #17a2b8;
 }
@@ -7,8 +16,6 @@
     cursor: pointer;
     color: #17a2b8;
     text-shadow: #137381 1px 1px 10px;
-    width: 100px;
-    height: 100px;
 }
 
 .searchbar{
@@ -24,13 +31,11 @@
     float: none;
 }
 
-
 li .nav-link{
     font-family: 'Fira Sans Condensed', sans-serif;
     font-size: 20px;
     padding-right: 50px;
-    color: #E9F0F7;
-    
+    color: rgba(233, 240, 247, 0.7);
 }
 
 .navbar .fas{
@@ -42,8 +47,6 @@ li .nav-link{
     text-shadow: #137381 1px 1px 10px;
     cursor: pointer;
 }
-
-
 
 li .nav-link:hover {
     color: #17a2b8;
