--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href=""><i class="fas fa-bicycle"></i></a>
+
+
+<nav class="navbar navbar-expand-lg">
+
+    <a class="navbar-brand" href="" routerLinkActive="active-link"><i class="fas fa-bicycle"></i></a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,16 +11,16 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav centre mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="" routerLinkActive="active">Acceuil</a>
+          <a class="nav-link" routerLink="" routerLinkActive="active-link">Acceuil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="vélos" routerLinkActive="active">Vélos</a>
+          <a class="nav-link" routerLink="velos" routerLinkActive="active-link">Vélos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="accessoires" routerLinkActive="active">Accessoires</a>
+          <a class="nav-link" routerLink="accessoires" routerLinkActive="active-link">Accessoires</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="inscription" routerLinkActive="active">S'inscrire</a>
+          <a class="nav-link" routerLink="inscription" routerLinkActive="active-link">S'inscrire</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
