--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,21 @@
 
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed');
 
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
 body, html {
     
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    
+}
+
+a:hover{
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a{
+    text-decoration: none;
 }
